force-app/main/default/objects/Account/fields/Number_Of_Finance_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Finance_Employees__c</fullName>
    <description>The total number of employees whose position is Finance.</description>
    <label>Number Of Finance Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>