force-app/main/default/objects/Account/fields/Percentage_of_Finance_Employees__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Finance_Employees__c</fullName>
    <description>The percentage of employees in the finance position relative to the Account’s total employee count.</description>
    <formula>Number_Of_Finance_Employees__c / Total_Number_Of_Contacts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Finance Employees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>