force-app/main/default/objects/Account/fields/Total_Number_Of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Contacts__c</fullName>
    <description>Displays the count of number of Contacts of the account</description>
    <label>Total Number Of Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>